--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class="container">
             <img src="assets/cat.jpg">
-            <input type="text" id="input-field" placeholder="Milk">
+            <input type="text" id="input-field" placeholder="Eg. Milk , Coconut , etc">
             <button id="add-button">Add to cart</button>
             <ul id="shopping-list">
             </ul>
