Added an error message , html and css for the error message.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <div class="container">
             <img src="assets/cat.jpg">
             <input type="text" id="input-field" placeholder="Eg. Milk , Coconut , etc">
-            <button id="add-button">Add to cart</button>
+            <div id="error-msg" class="error"></div>
+            <button id="add-button" type="button">Add to cart</button>
             <ul id="shopping-list">
             </ul>
         </div>
