Added an icon for removal of all items in the list

--- a/index.html
+++ b/index.html
@@ -13,6 +13,21 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
+        <img
+            id="delete-all-icon"
+            src="assets/trash.png"
+            alt="Delete All"
+            title="Delete All"
+            style="
+                position: absolute;
+                top: 12px;
+                right: 12px;
+                width: 32px;
+                height: 32px;
+                cursor: pointer;
+                opacity: 0.75;
+                z-index: 10;"
+        />
         <div class="container">
             <img draggable="false" src="assets/cat.jpg">
             <input type="text" id="input-field" placeholder="Eg. Milk , Coconut , etc">
