--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
                 height: 32px;
                 cursor: pointer;
                 opacity: 0.75;
-                z-index: 10;"
+                z-index: 10;
+                -webkit-user-select: none;
+                -webkit-touch-callout: none;
+                user-select: none;
+                touch-action: manipulation;
+            "
         />
         <div class="container">
             <img draggable="false" src="assets/cat.jpg">
