--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
             src="assets/trash.png"
             alt="Delete All"
             title="Delete All"
+            draggable="false"
+            tabindex="-1"
             style="
                 position: absolute;
                 top: 12px;
@@ -26,13 +28,9 @@
                 height: 32px;
                 cursor: pointer;
                 opacity: 0.75;
-                z-index: 10;
-                -webkit-user-select: none;
-                -webkit-touch-callout: none;
-                user-select: none;
-                touch-action: manipulation;
-            "
-        />
+                z-index: 10;"
+            />
+
         <div class="container">
             <img draggable="false" src="assets/cat.jpg">
             <input type="text" id="input-field" placeholder="Eg. Milk , Coconut , etc">
