--- a/index.html
+++ b/index.html
@@ -13,24 +13,7 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <img
-            id="delete-all-icon"
-            src="assets/trash.png"
-            alt="Delete All"
-            title="Delete All"
-            draggable="false"
-            tabindex="-1"
-            style="
-                position: absolute;
-                top: 12px;
-                right: 12px;
-                width: 32px;
-                height: 32px;
-                cursor: pointer;
-                opacity: 0.75;
-                z-index: 10;"
-            />
-
+        <div id="delete-all-icon" title="Delete All"></div>
         <div class="container">
             <img draggable="false" src="assets/cat.jpg">
             <input type="text" id="input-field" placeholder="Eg. Milk , Coconut , etc">
